# Parallel_ViBe

./: .gitignore  CMakeLists.txt  README.md  README.txt  benchmark
include/: common.hpp.conf
src/: kernel.cl  main.cpp  vibe.cpp  vibe_cpu.cpp  vibe_opencl.cpp  vibe_sycl.cpp
test/SYCL/: compilation.sh  vibe.bc  vibe.cpp  vibe.sycl
test/opencl/: kernel.cl  vector_addition.c  vibe.cpp  vibe.cpp.save  vibe_avant_clean.cpp  vibe_image.cpp
